fix: also close comment form when user toggles comments to collapse

--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -14,6 +14,14 @@
   padding: 0.75em 1em 0.65em 1em;
 }
 
+.bottom-no-padding {
+  padding: 0.75em 1em 0.15em 1em;
+}
+
+.bottom-post-border {
+  border-top: 1px solid #d3d3d3;
+}
+
 .author-post-profile {
   height: 40px;
   width: 40px;
@@ -66,9 +74,8 @@
 
 .post-actions-container {
   border-top: 1px solid #d3d3d3;
-  border-bottom: 1px solid #d3d3d3;
   height: 45px;
-  padding: 0.5em 0.25em;
+  padding: 0 0.25em 0 0.25em;
 }
 
 .users-liked-list {
